library/src/libqjsonarray.h

typedef QJsonArray::const_iterator QJsonArray__const_iterator;
typedef QJsonArray::iterator QJsonArray__iterator;
typedef struct QJsonArray QJsonArray;
typedef struct QJsonArray__const_iterator QJsonArray__const_iterator;
typedef struct QJsonArray__iterator QJsonArray__iterator;
typedef struct QJsonValue QJsonValue;
typedef struct QJsonValueConstRef QJsonValueConstRef;
typedef struct QJsonValueRef QJsonValueRef;
QTLIBC_API QJsonArray* QJsonArray_new();
QTLIBC_API QJsonArray* QJsonArray_new2(QJsonArray* other);
QTLIBC_API void QJsonArray_OperatorAssign(QJsonArray* self, QJsonArray* other);
QTLIBC_API QJsonArray* QJsonArray_FromStringList(libqt_list /* of libqt_string */ list);
QTLIBC_API ptrdiff_t QJsonArray_Size(const QJsonArray* self);
QTLIBC_API ptrdiff_t QJsonArray_Count(const QJsonArray* self);
QTLIBC_API bool QJsonArray_IsEmpty(const QJsonArray* self);
QTLIBC_API QJsonValue* QJsonArray_At(const QJsonArray* self, ptrdiff_t i);
QTLIBC_API QJsonValue* QJsonArray_First(const QJsonArray* self);
QTLIBC_API QJsonValue* QJsonArray_Last(const QJsonArray* self);
QTLIBC_API void QJsonArray_Prepend(QJsonArray* self, QJsonValue* value);
QTLIBC_API void QJsonArray_Append(QJsonArray* self, QJsonValue* value);
QTLIBC_API void QJsonArray_RemoveAt(QJsonArray* self, ptrdiff_t i);
QTLIBC_API QJsonValue* QJsonArray_TakeAt(QJsonArray* self, ptrdiff_t i);
QTLIBC_API void QJsonArray_RemoveFirst(QJsonArray* self);
QTLIBC_API void QJsonArray_RemoveLast(QJsonArray* self);
QTLIBC_API void QJsonArray_Insert(QJsonArray* self, ptrdiff_t i, QJsonValue* value);
QTLIBC_API void QJsonArray_Replace(QJsonArray* self, ptrdiff_t i, QJsonValue* value);
QTLIBC_API bool QJsonArray_Contains(const QJsonArray* self, QJsonValue* element);
QTLIBC_API QJsonValueRef* QJsonArray_OperatorSubscript(QJsonArray* self, ptrdiff_t i);
QTLIBC_API QJsonValue* QJsonArray_OperatorSubscriptWithQsizetype(const QJsonArray* self, ptrdiff_t i);
QTLIBC_API bool QJsonArray_OperatorEqual(const QJsonArray* self, QJsonArray* other);
QTLIBC_API bool QJsonArray_OperatorNotEqual(const QJsonArray* self, QJsonArray* other);
QTLIBC_API void QJsonArray_Swap(QJsonArray* self, QJsonArray* other);
QTLIBC_API QJsonArray__iterator* QJsonArray_Begin(QJsonArray* self);
QTLIBC_API QJsonArray__const_iterator* QJsonArray_Begin2(const QJsonArray* self);
QTLIBC_API QJsonArray__const_iterator* QJsonArray_ConstBegin(const QJsonArray* self);
QTLIBC_API QJsonArray__const_iterator* QJsonArray_Cbegin(const QJsonArray* self);
QTLIBC_API QJsonArray__iterator* QJsonArray_End(QJsonArray* self);
QTLIBC_API QJsonArray__const_iterator* QJsonArray_End2(const QJsonArray* self);
QTLIBC_API QJsonArray__const_iterator* QJsonArray_ConstEnd(const QJsonArray* self);
QTLIBC_API QJsonArray__const_iterator* QJsonArray_Cend(const QJsonArray* self);
QTLIBC_API QJsonArray__iterator* QJsonArray_Insert2(QJsonArray* self, QJsonArray__iterator* before, QJsonValue* value);
QTLIBC_API QJsonArray__iterator* QJsonArray_Erase(QJsonArray* self, QJsonArray__iterator* it);
QTLIBC_API QJsonArray* QJsonArray_OperatorPlus(const QJsonArray* self, QJsonValue* v);
QTLIBC_API QJsonArray* QJsonArray_OperatorPlusAssign(QJsonArray* self, QJsonValue* v);
QTLIBC_API QJsonArray* QJsonArray_OperatorShiftLeft(QJsonArray* self, QJsonValue* v);
QTLIBC_API void QJsonArray_PushBack(QJsonArray* self, QJsonValue* t);
QTLIBC_API void QJsonArray_PushFront(QJsonArray* self, QJsonValue* t);
QTLIBC_API void QJsonArray_PopFront(QJsonArray* self);
QTLIBC_API void QJsonArray_PopBack(QJsonArray* self);
QTLIBC_API bool QJsonArray_Empty(const QJsonArray* self);
QTLIBC_API void QJsonArray_Delete(QJsonArray* self);
QTLIBC_API QJsonArray__iterator* QJsonArray__iterator_new(QJsonArray__iterator* other);
QTLIBC_API void QJsonArray__iterator_OperatorAssign(QJsonArray__iterator* self, QJsonArray__iterator* other);
QTLIBC_API QJsonValueRef* QJsonArray__iterator_OperatorMultiply(const QJsonArray__iterator* self);
QTLIBC_API QJsonValueConstRef* QJsonArray__iterator_OperatorMinusGreater(const QJsonArray__iterator* self);
QTLIBC_API QJsonValueRef* QJsonArray__iterator_OperatorMinusGreater2(QJsonArray__iterator* self);
QTLIBC_API QJsonValueRef* QJsonArray__iterator_OperatorSubscript(const QJsonArray__iterator* self, ptrdiff_t j);
QTLIBC_API bool QJsonArray__iterator_OperatorEqual(const QJsonArray__iterator* self, QJsonArray__iterator* o);
QTLIBC_API bool QJsonArray__iterator_OperatorNotEqual(const QJsonArray__iterator* self, QJsonArray__iterator* o);
QTLIBC_API bool QJsonArray__iterator_OperatorLesser(const QJsonArray__iterator* self, QJsonArray__iterator* other);
QTLIBC_API bool QJsonArray__iterator_OperatorLesserOrEqual(const QJsonArray__iterator* self, QJsonArray__iterator* other);
QTLIBC_API bool QJsonArray__iterator_OperatorGreater(const QJsonArray__iterator* self, QJsonArray__iterator* other);
QTLIBC_API bool QJsonArray__iterator_OperatorGreaterOrEqual(const QJsonArray__iterator* self, QJsonArray__iterator* other);
QTLIBC_API bool QJsonArray__iterator_OperatorEqualWithQJsonArrayconstIterator(const QJsonArray__iterator* self, QJsonArray__const_iterator* o);
QTLIBC_API bool QJsonArray__iterator_OperatorNotEqualWithQJsonArrayconstIterator(const QJsonArray__iterator* self, QJsonArray__const_iterator* o);
QTLIBC_API bool QJsonArray__iterator_OperatorLesserWithOther(const QJsonArray__iterator* self, QJsonArray__const_iterator* other);
QTLIBC_API bool QJsonArray__iterator_OperatorLesserOrEqualWithOther(const QJsonArray__iterator* self, QJsonArray__const_iterator* other);
QTLIBC_API bool QJsonArray__iterator_OperatorGreaterWithOther(const QJsonArray__iterator* self, QJsonArray__const_iterator* other);
QTLIBC_API bool QJsonArray__iterator_OperatorGreaterOrEqualWithOther(const QJsonArray__iterator* self, QJsonArray__const_iterator* other);
QTLIBC_API QJsonArray__iterator* QJsonArray__iterator_OperatorPlusPlus(QJsonArray__iterator* self);
QTLIBC_API QJsonArray__iterator* QJsonArray__iterator_OperatorPlusPlusWithInt(QJsonArray__iterator* self, int param1);
QTLIBC_API QJsonArray__iterator* QJsonArray__iterator_OperatorMinusMinus(QJsonArray__iterator* self);
QTLIBC_API void QJsonArray__iterator_Delete(QJsonArray__iterator* self);